// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`split .kibana index into multiple system indices when multiple Kibana migrators run in parallel correctly migrates 7.7.2_xpack_100k_obj.zip archive: after migration 1`] = `
Object {
  ".kibana": Object {
    "apm-telemetry": 1,
    "config": 1,
    "space": 1,
    "ui-metric": 5,
  },
  ".kibana_alerting_cases": Object {},
  ".kibana_analytics": Object {
    "dashboard": 52994,
    "index-pattern": 1,
    "search": 1,
    "visualization": 53004,
  },
  ".kibana_ingest": Object {},
  ".kibana_security_solution": Object {},
  ".kibana_task_manager": Object {
    "task": 5,
  },
}
`;

exports[`split .kibana index into multiple system indices when multiple Kibana migrators run in parallel correctly migrates 7.7.2_xpack_100k_obj.zip archive: before migration 1`] = `
Object {
  ".kibana": Object {
    "apm-telemetry": 1,
    "application_usage_transactional": 4,
    "config": 1,
    "dashboard": 52994,
    "index-pattern": 1,
    "maps-telemetry": 1,
    "search": 1,
    "space": 1,
    "ui-metric": 5,
    "visualization": 53004,
  },
  ".kibana_alerting_cases": undefined,
  ".kibana_analytics": undefined,
  ".kibana_ingest": undefined,
  ".kibana_security_solution": undefined,
  ".kibana_task_manager": Object {
    "task": 5,
  },
}
`;
